# state_machine

./: .gitignore  Block.h  Block.hpp  CMakeLists.txt  README.md  StateMachine.h  StateMachine.hpp  Vertex.h  Vertex.hpp  block.hpp  block.inl  input.txt  main.cpp  state_machine.hpp  state_machine.inl  vertex.hpp  vertex.inl
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  idea.md  question.md  task.md
re_compnent/: _re_component.hpp  _re_component.inl
state_machine/: state_machine_fast.hpp  state_machine_fast.inl  state_machine_slow.hpp  state_machine_suf.hpp
state_machine/memory_optimisation/: state_machine_slow.hpp  state_machine_slow.inl
state_machine/time_optimisation/: state_machine_fast.hpp  state_machine_fast.inl  state_machine_suf.hpp  state_machine_suf.inl
vertexes/: _vertex.hpp  _vertex.inl  _vertex_with_e.hpp  _vertex_with_e.inl
